fix gap

--- a/src/components/Learn/Learn.scss
+++ b/src/components/Learn/Learn.scss
@@ -48,6 +48,7 @@ body {
 
     &__text--sub {
         display: flex;
+        gap: 1rem;
         justify-content: space-between;
         width: 100%;
 
